# pipes-p2p-examples

./: pipes-p2p-examples.cabal
examples/addr/: Main.hs
